syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string productId = 1;
}

message GetProductResponse {
  string productId = 1;
  string name = 2;
  double price = 3;
}
